<resources>
    <string name="app_name">Find</string>

    <string name="location">Current location:</string>
    <string name="learning_location">Learning location</string>
    <string name="start_learning">Start learning</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_dashboard">Dashboard</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="username">Username</string>
    <string name="group_name">Group name</string>
    <string name="server_name">Server name</string>
    <string name="save">Save</string>
    <string name="activate_wifi">Activate WiFi</string>
    <string name="response">Response status:</string>
    <string name="stop_learning">Stop Learning</string>
    <string name="user_label">User:</string>
    <string name="group_label">Group:</string>
    <string name="back">Back</string>
</resources>
