<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             tools:context=".ui.fragments.SettingsFragment">

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/username_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                />

        <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username_label"
                />

        <TextView
                android:id="@+id/group_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:text="@string/group_name"
                />

        <EditText
                android:id="@+id/group_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/group_name_label"
                />

        <TextView
                android:id="@+id/server_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/group_name"
                android:text="@string/server_name"
                />

        <EditText
                android:id="@+id/server_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/server_name_label"
                />

        <Button
                style="@style/buttonStyle"
                android:id="@+id/save_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/server_address"
                android:text="@string/save"/>

    </RelativeLayout>

</FrameLayout>
