<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             tools:context="io.github.pablomusumeci.find.ui.fragments.TrackingFragment">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/current_location_label"
                android:text="@string/location"
                android:layout_gravity="center_horizontal"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/current_location_value"
                android:layout_below="@+id/current_location_label"
                android:layout_gravity="center_horizontal"/>

        <ProgressBar
                style="@style/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progress_bar_tracking"
                android:layout_below="@+id/current_location_value" />



        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/response"
                android:layout_gravity="center_horizontal"
                android:layout_below="@id/progress_bar_tracking"
                android:id="@+id/response_status_label"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/response_status_label"
                android:id="@+id/response_status"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/response_status"
                android:id="@+id/response_value"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/response_value"
                android:text="@string/back"
                style="@style/buttonStyle"
                android:id="@+id/return_from_tracking"/>
    </RelativeLayout>
</FrameLayout>
